--- a/cryptodash/src/views/Dashboard.css
+++ b/cryptodash/src/views/Dashboard.css
@@ -1,116 +1,99 @@
 .dashboard-container {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-  }
-  
-  .sidebar {
-    flex: 0 0 250px;
-    background-color: white;
-    padding: 20px;
-    height: 100%;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  .sidebar nav a {
-    display: block;
-    padding: 10px 15px;
-    color: #333;
-    text-decoration: none;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-  }
-  
-  .sidebar nav a:hover {
-    background-color: #f0f0f0;
-  }
-  
-  .sidebar nav a.active {
-    background-color: #f0f0f0;
-    font-weight: bold;
-  }
-  
-  .main-content {
-    flex: 1;
-    padding: 20px;
-    background-color: #ecf0f1;
-    position: relative;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .header-left {
-    display: flex;
-    align-items: center;
-  }
-  
-  .avatar {
-    width: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-  
-  .settings-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
-  }
-  
-  .options {
-    display: flex;
-    gap: 10px;
-  }
-  
-  .options a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  .icon {
-    width: 20px;
-    margin-right: 10px;
-    vertical-align: middle;
-  }
-  
-  .balance-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  .balance {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .transactions-container {
-    margin-top: 20px;
-  }
-  
-  .transactions-container table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .transactions-container th,
-  .transactions-container td {
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  .transactions-container th {
-    background-color: #f2f2f2;
-  }
-  
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
+.main-content-wrapper {
+  position: relative;
+  flex: 1;
+}
+
+.main-content {
+  flex: 1;
+  padding: 20px;
+  background-color: #ecf0f1;
+  position: relative;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #ecf0f1;
+}
+
+.header-left {
+  display: flex;
+  align-items: center;
+}
+
+.avatar {
+  width: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.balance-container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.balance {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.transactions-container {
+  margin-top: 20px;
+}
+
+.transactions-container table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.transactions-container th,
+.transactions-container td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+}
+
+.transactions-container th {
+  background-color: #f2f2f2;
+}
+
+.verification-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  margin-top: 125px; /* Ajusta este valor según la altura de tu encabezado */
+}
+
+.verification-message {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.verification-message button {
+  cursor: pointer;
+}
+
+.blur {
+  filter: blur(5px);
+  pointer-events: none;
+}
