--- a/cryptodash/src/views/Dashboard.css
+++ b/cryptodash/src/views/Dashboard.css
@@ -83,12 +83,18 @@
 }
 
 .verification-message {
+  width: 30%;
+  text-align: center;
   display: block;
   margin: auto;
   background: #fff;
-  padding: 20px;
+  padding: 30px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.verification-message h3{
+  margin-top: 0px;
 }
 
 .verification-message button {
