--- a/cryptodash/src/components/forms/formstyle.css
+++ b/cryptodash/src/components/forms/formstyle.css
@@ -44,6 +44,25 @@
   align-items: center;
 }
 
+.image-upload-section {
+  width: 100%; /* Ancho completo */
+  display: flex;
+  flex-direction: column;
+  align-items: right;
+  margin-bottom: 30px; /* Espacio entre los cuadros */
+}
+
+.image-upload-section p{
+padding-bottom: 10px;
+}
+
+.image-upload-label {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 5px;
+}
+
 .image-box {
   width: 100%;
   height: 200px;
@@ -66,7 +85,7 @@
   font-size: 20px;
 }
 
-.popup-upload-frontimage {
+.popup-upload-frontimage, .popup-upload-backimage {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -95,7 +114,7 @@
   z-index: 1000; /* Asegura que la capa de superposición esté por encima de otros elementos */
 }
 
-.popup-upload-frontimage img {
+.popup-upload-frontimage img, .popup-upload-backimage img{
   max-width: 100%; /* Asegura que la imagen se ajuste al ancho del popup */
   height: auto; /* Mantiene la proporción de la imagen */
 }
@@ -133,12 +152,8 @@
   margin-left: 10px;
 }
 
-.popup-upload-frontimage input[type="file"] {
-  margin-top: 10px; /* Espacio encima del input de archivo */
-}
-
 .image-container-popup {
-  width: 100%; /* Ancho del contenedor de la imagen */
+  width: 60%; /* Ancho del contenedor de la imagen */
   height: 200px; /* Altura del contenedor de la imagen */
   display: flex;
   align-items: center;
